<resources>
    <string name="app_name">Shop</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="setting">Setting</string>
    <string name="mobiles">Mobile</string>
    <string name="makeup">MakeUp</string>
    <string name="discount">Discount:</string>
    <string name="amazing_offer">AmazingOffer</string>
    <string name="warranty">Warranty: </string>
    <string name="ok">OK</string>
    <string name="brand">Brand:</string>
    <string name="title">Title:</string>
    <string name="cat_name">Category Name:</string>
    <string name="inventory">Inventory:</string>
    <string name="special">Special:</string>
    <string name="lbl_discount_product">Discount:</string>
    <string name="price">Price:</string>
    <string name="mode">Style</string>
    <string name="sport">Sport</string>
    <string name="home_product">Home</string>
    <string name="favorite">Favorite</string>
    <string name="setting_path">M19.14,12.94c0.04,-0.3 0.06,-0.61 0.06,-0.94c0,-0.32 -0.02,-0.64 -0.07,-0.94l2.03,-1.58c0.18,-0.14 0.23,-0.41 0.12,-0.61l-1.92,-3.32c-0.12,-0.22 -0.37,-0.29 -0.59,-0.22l-2.39,0.96c-0.5,-0.38 -1.03,-0.7 -1.62,-0.94L14.4,2.81c-0.04,-0.24 -0.24,-0.41 -0.48,-0.41h-3.84c-0.24,0 -0.43,0.17 -0.47,0.41L9.25,5.35C8.66,5.59 8.12,5.92 7.63,6.29L5.24,5.33c-0.22,-0.08 -0.47,0 -0.59,0.22L2.74,8.87C2.62,9.08 2.66,9.34 2.86,9.48l2.03,1.58C4.84,11.36 4.8,11.69 4.8,12s0.02,0.64 0.07,0.94l-2.03,1.58c-0.18,0.14 -0.23,0.41 -0.12,0.61l1.92,3.32c0.12,0.22 0.37,0.29 0.59,0.22l2.39,-0.96c0.5,0.38 1.03,0.7 1.62,0.94l0.36,2.54c0.05,0.24 0.24,0.41 0.48,0.41h3.84c0.24,0 0.44,-0.17 0.47,-0.41l0.36,-2.54c0.59,-0.24 1.13,-0.56 1.62,-0.94l2.39,0.96c0.22,0.08 0.47,0 0.59,-0.22l1.92,-3.32c0.12,-0.22 0.07,-0.47 -0.12,-0.61L19.14,12.94zM12,15.6c-1.98,0 -3.6,-1.62 -3.6,-3.6s1.62,-3.6 3.6,-3.6s3.6,1.62 3.6,3.6S13.98,15.6 12,15.6z</string>
    <string name="shop">Shop</string>
    <string name="close">Close</string>
    <string name="product_image">ProductImage</string>
    <string name="title_activity_shop" translatable="false">ShopActivity</string>
    <string name="description">Description:</string>
    <string name="save">Save</string>
    <string name="app_version">App version:</string>
    <string name="about_app">About app</string>
    <string name="time">Time:</string>
    <string name="date">Date:</string>
    <string name="clear">Clear</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="date_modified">Date Modified</string>
    <string name="_search">Search</string>
    <string name="log_out">Log Out</string>
    <string name="search_here">Search Here…</string>
    <string name="no_data_found">No Data Found!</string>
    <string name="type">Type:</string>
    <string name="account">Account</string>
    <string name="on">On</string>
    <string name="no_user_name">No UserName</string>
    <string name="general">General</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="off">Off</string>
    <string name="about_title">About</string>
    <string name="no_name">No Name</string>
    <string name="phonenumber_require">PhoneNumber Require</string>
    <string name="delete_account">Delete Account</string>
    <string name="upload_image_profile">Upload Image Profile</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="email">email</string>
    <string name="user">user</string>
    <string name="history_icon">HistoryIcon</string>
    <string name="confirm">Confirm</string>
    <string name="dismiss">Dismiss</string>
    <string name="notifications">Notifications</string>
    <string name="address_require">Address require!</string>
    <string name="details">Details</string>
    <string name="calculate">Calculate</string>
    <string name="conditions_and_descriptions">Conditions and description:</string>
    <string name="add_person">Add person</string>
    <string name="role">Person role:</string>
    <string name="are_you_sure_to_delete_person">Are you sure to delete this person?</string>
    <string name="edit_person">Edit person</string>
    <string name="persons_limited_reached">Persons limited reached</string>
    <string name="history">History</string>
    <string name="clear_history">Clear history</string>
    <string name="username">Username</string>
    <string name="repeated_password">Repeat password</string>
    <string name="change_password">Change password</string>
    <string name="available">Available</string>
    <string name="not_available">Not available</string>
    <string name="please_fill_at_lease_one_field">please fill at lease one field!</string>
    <string name="edit_profile">Edit profile</string>
    <string name="firstname">Name:</string>
    <string name="lastname">Family name:</string>
    <string name="phonenumber">Phone number:</string>
    <string name="current_password">Current password:</string>
    <string name="new_password">New password:</string>

</resources>