<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rel_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200dp"
                android:layout_margin="@dimen/_5dp"
                app:cardCornerRadius="@dimen/_10dp"
                app:cardElevation="@dimen/_5dp"
                android:backgroundTint="@color/white"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/viewPager2"
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="@dimen/_0dp"
                        android:importantForAccessibility="no"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
                        android:id="@+id/spring_dots_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10dp"
                        app:dampingRatio="0.5"
                        app:dotsColor="@color/black"
                        app:dotsStrokeColor="@color/white"
                        app:dotsCornerRadius="2dp"
                        app:dotsSize="16dp"
                        app:dotsSpacing="6dp"
                        app:dotsStrokeWidth="2dp"
                        app:stiffness="300"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_amazing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5dp"
            android:text="@string/amazing_offer"
            android:textSize="@dimen/_20sp"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rel_card" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_amazing"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5dp"
            app:layout_constraintTop_toBottomOf="@id/lbl_amazing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5dp"
            android:text="@string/discount"
            android:textSize="@dimen/_20sp"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rec_amazing" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_discount"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lbl_discount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_mobiles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5dp"
            android:text="@string/mobiles"
            android:textSize="@dimen/_20sp"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rec_discount" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_mobiles"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5dp"
            app:layout_constraintTop_toBottomOf="@id/lbl_mobiles"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_makeup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5dp"
            android:text="@string/makeup"
            android:textSize="@dimen/_20sp"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rec_mobiles" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_makeup"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lbl_makeup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5dp"
            android:text="@string/mode"
            android:textSize="@dimen/_20sp"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rec_makeup" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_style"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lbl_mode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5dp"
            android:text="@string/sport"
            android:textSize="@dimen/_20sp"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rec_style" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_sport"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lbl_sport"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5dp"
            android:text="@string/home_product"
            android:textSize="@dimen/_20sp"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rec_sport" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recHome"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lbl_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="@dimen/_200"
            android:layout_height="@dimen/dimen_16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>