<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.product.ProductDetailsFragment">

    <data>
        <variable
            name="product"
            type="com.store.shop.data.model.Product" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_product"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_close"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/baseline_close_24"
                        />


                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_fav"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/baseline_favorite_border_24"
                        app:tint="@color/red"
                        />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.appcompat.widget.Toolbar>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cons_product"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_210dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar_product">


                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/pager_product"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="@dimen/_0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>



                <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
                    android:id="@+id/spring_dots_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10dp"
                    app:dampingRatio="0.5"
                    app:dotsColor="@color/black"
                    app:dotsStrokeColor="@color/white"
                    app:dotsCornerRadius="2dp"
                    app:dotsSize="16dp"
                    app:dotsSpacing="6dp"
                    app:dotsStrokeWidth="2dp"
                    app:stiffness="300"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_product"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8dp"
                app:cardCornerRadius="@dimen/_10dp"
                app:cardElevation="@dimen/_8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cons_product">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_8dp">

                    <androidx.appcompat.widget.AppCompatRatingBar
                        android:id="@+id/rate_product"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:rating="@{Float.parseFloat(product.rate)}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/lbl_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textColor="@color/purple_700"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/_8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/rate_product" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@{product.title}"
                        android:layout_marginStart="@dimen/_8dp"
                        android:layout_marginTop="@dimen/_8dp"
                        app:layout_constraintStart_toEndOf="@id/lbl_title"
                        app:layout_constraintTop_toBottomOf="@id/rate_product"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/lbl_cat_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cat_name"
                        android:textColor="@color/purple_700"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/_8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/lbl_title" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_cat_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@{product.catName}"
                        android:layout_marginStart="@dimen/_8dp"
                        android:layout_marginTop="@dimen/_8dp"
                        app:layout_constraintStart_toEndOf="@id/lbl_cat_name"
                        app:layout_constraintTop_toBottomOf="@id/lbl_title" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/lbl_brand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/brand"
                        android:textColor="@color/purple_700"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/_8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/lbl_cat_name" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_brand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@{product.brand}"
                        android:layout_marginStart="@dimen/_8dp"
                        android:layout_marginTop="@dimen/_8dp"
                        app:layout_constraintStart_toEndOf="@id/lbl_brand"
                        app:layout_constraintTop_toBottomOf="@id/lbl_cat_name" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/lbl_warranty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/warranty"
                        android:textColor="@color/purple_700"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/_8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/lbl_brand" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_warranty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8dp"
                        android:layout_marginTop="@dimen/_8dp"
                        android:textColor="@color/black"
                        android:text="@{product.garanti}"
                        app:layout_constraintStart_toEndOf="@id/lbl_warranty"
                        app:layout_constraintTop_toBottomOf="@id/lbl_brand" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/lbl_inventory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inventory"
                        android:textColor="@color/purple_700"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/_8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/lbl_warranty" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_inventory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8dp"
                        android:layout_marginTop="@dimen/_8dp"
                        android:textColor="@color/black"
                        android:text='@{product.count == "0" ? "Not available" : product.count}'
                        app:layout_constraintStart_toEndOf="@id/lbl_inventory"
                        app:layout_constraintTop_toBottomOf="@id/lbl_warranty" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/lbl_special"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/special"
                        android:textColor="@color/purple_700"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/_8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/lbl_inventory" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_special"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8dp"
                        android:layout_marginTop="@dimen/_8dp"
                        android:textColor="@color/black"
                        android:text='@{product.special == "0" ? "No" : "Yes"}'
                        app:layout_constraintStart_toEndOf="@id/lbl_special"
                        app:layout_constraintTop_toBottomOf="@id/lbl_inventory" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/lbl_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textColor="@color/purple_700"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/_8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/lbl_special" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8dp"
                        android:layout_marginTop="@dimen/_8dp"
                        android:textColor="@color/black"
                        android:text="@{product.price}"
                        app:layout_constraintStart_toEndOf="@id/lbl_price"
                        app:layout_constraintTop_toBottomOf="@id/lbl_special" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/lbl_discount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_discount_product"
                        android:textColor="@color/purple_700"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/_8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/lbl_price" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_discount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8dp"
                        android:layout_marginTop="@dimen/_8dp"
                        android:textColor="@color/black"
                        android:text='@{product.discount == "0" ? "No" : "Yes"}'
                        app:layout_constraintStart_toEndOf="@id/lbl_discount"
                        app:layout_constraintTop_toBottomOf="@id/lbl_price" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8dp"
                app:cardCornerRadius="@dimen/_10dp"
                app:cardElevation="@dimen/_8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_product">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_8dp"
                    android:layout_margin="@dimen/_8dp"
                    >

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_short"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@{product.shortDescription}"
                        android:textColor="@color/black"
                        android:layout_margin="@dimen/_8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />




                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>






</layout>